--- a/app/src/main/res/layout/registro_activity.xml
+++ b/app/src/main/res/layout/registro_activity.xml
@@ -43,7 +43,7 @@
         android:layout_marginEnd="32dp"
         android:ems="10"
         android:hint="E-mail"
-        android:inputType="textWebEmailAddress|textEmailAddress"
+        android:inputType="textEmailAddress"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
