tela de cadastro feita e enviando dados, falta receber, formatar e fazer a mesma coisa para a tela de receitas

--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -36,6 +36,7 @@
                 android:id="@+id/despesa_nome"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
                 android:text="Nome da despesa"
                 android:textSize="24sp"
                 android:textStyle="bold"
@@ -50,6 +51,7 @@
                 android:id="@+id/despesa_data"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
                 android:text="data da despesa"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -62,6 +64,7 @@
                 android:id="@+id/despesa_valor"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
                 android:text="valor da despesa"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
