--- a/app/src/main/res/layout/registro_activity.xml
+++ b/app/src/main/res/layout/registro_activity.xml
@@ -48,8 +48,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.431" />
+        app:layout_constraintTop_toBottomOf="@+id/Cadastrese"
+        app:layout_constraintVertical_bias="0.185" />
 
     <EditText
         android:id="@+id/Registro_Senha"
