--- a/app/src/main/res/layout/item_layout2.xml
+++ b/app/src/main/res/layout/item_layout2.xml
@@ -34,7 +34,7 @@
                 app:srcCompat="@drawable/lucro" />
 
             <TextView
-                android:id="@+id/despesa_nome"
+                android:id="@+id/nomeDoLucro"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -49,7 +49,7 @@
                 app:layout_constraintVertical_bias="0.0" />
 
             <TextView
-                android:id="@+id/despesa_data"
+                android:id="@+id/dataDoLucro"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -62,7 +62,7 @@
                 app:layout_constraintVertical_bias="0.672" />
 
             <TextView
-                android:id="@+id/despesa_valor"
+                android:id="@+id/valorDoLucro"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
